[tool.poetry]
name = "pgzero-new"
version = "0.1.0"
description = ""
authors = ["Naohiro2g <587586+Naohiro2g@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pgzero = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
